// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup when is invalid renders without crashing 1`] = `
<div
  class="sc-AykKC jCoaxg"
>
  <label
    class="sc-AykKD jkwcyL"
    for="password"
  >
    Password
  </label>
  <input
    class="sc-AykKE kuUACb"
    input="[object Object]"
    placeholder="Password"
    type="password"
  />
  <span
    class="sc-AykKF leNYyz"
  >
    This field is required.
  </span>
</div>
`;

exports[`FormGroup when is valid renders without crashing 1`] = `
<div
  class="sc-AykKC jCoaxg"
>
  <label
    class="sc-AykKD jkwcyL"
    for="password"
  >
    Password
  </label>
  <input
    class="sc-AykKE kuUACb"
    input="[object Object]"
    placeholder="Password"
    type="password"
  />
</div>
`;
